Done with the data visualization of Business Questions.

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -9,7 +9,7 @@
     }
    },
    "source": [
-    "### Exploratory Data Analysis \n",
+    "### Exploratory Data Analysis (Preprocessing)\n",
     "Understanding the dataset to explore how the data is present in the database and if there is a need of creating some aggregated tables that can help with:\n",
     "\n",
     "- Vendor selection for profitability\n",
@@ -4511,7 +4511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a75bfd89-de73-44d2-bc44-fe66f2d63710",
    "metadata": {},
    "outputs": [],
